# Job-tracker

./: .gitignore  README.md  jobs.py  pyproject.toml
support-eval-harness/: .gitignore  README.md  pyproject.toml
support-eval-harness/data/: gold_labels.json  tickets.json
support-eval-harness/src/: generate.py  schema.py
